completed delete and edit functions