@@ -11,6 +11,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.Mockito.*;
 
@@ -72,17 +73,37 @@ class TodoServiceTest {
     @Test
     void getUpcomingTodos() {
         String nowTime = "2023-07-27 12:34:56.123456";
-        List<Todo> todos = Arrays.asList(
+        List<Todo> todos = List.of(
                 new Todo("1", "go hiking", "2023-08-23T15:55:33.000+02:00", Status.OPEN.getStatus(), nowTime)
         );
 
         when(dateFormaterService.calcTimeDiffInDays("2023-07-30T15:55:33.000+02:00")).thenReturn((long) 25);
 
         when(todoRepository.findAll()).thenReturn(todos);
-        List<Todo> actual = Arrays.asList(
+        List<Todo> actual = List.of(
                 new Todo("1", "go hiking", "2023-08-23T15:55:33.000+02:00", Status.OPEN.getStatus(), nowTime)
         );
         List<Todo> expected = todoService.getUpcomingTodos();
         Assertions.assertEquals(expected, actual);
+    }
+
+    @Test
+    void testDeleteTodo() {
+        todoService.deleteTodo("1");
+        verify(todoRepository).deleteById("1");
+    }
+
+    @Test
+    void testEditTodo() {
+        String nowTime = "2023-07-27 12:34:56.123456";
+        when(todoRepository.findById("1")).thenReturn(Optional.of(new Todo("1", "go bike riding", "2023-08-26T15:55:33.000+02:00", Status.OPEN.getStatus(), nowTime)));
+        TodoWithOutId todoWithOutId = new TodoWithOutId(
+                "go out to see friends",
+                "2023-08-23T15:55:33.000+02:00"
+        );
+
+        Todo actual = todoService.editTodo(todoWithOutId, "1");
+        Todo expected = new Todo("1", "go bike riding", "2023-08-26T15:55:33.000+02:00", Status.OPEN.getStatus(), nowTime);
+        Assertions.assertNotEquals(expected, actual);
     }
 }
